--- a/static/src/assets/scss/app.scss
+++ b/static/src/assets/scss/app.scss
@@ -50,4 +50,5 @@
 @include motion-ui-transitions;
 @include motion-ui-animations;
 
+@import 'components/staff';
 @import 'components/qualifications';
