--- a/static/src/assets/scss/components/_staff.scss
+++ b/static/src/assets/scss/components/_staff.scss
@@ -1,35 +1,61 @@
 /* ---------- _staff.scss ---------- */
 .staff-aside {
-  text-align: center;
+    text-align: center;
 }
 
 .staff-photo {
-  padding: 10px;
-  margin-bottom: 10px;
+    padding: 10px;
+    margin-bottom: 10px;
 }
 
 .staff-about-title {
-  padding-top: 10px;
-  font-size: rem-calc(25);
+    padding-top: 10px;
+    font-size: rem-calc(25);
 }
 
 .staff-about-position {
-  font-size: rem-calc(16);
-  margin-bottom: 30px;
+    margin-bottom: 30px;
+    font-size: rem-calc(16);
 }
 
 .staff-about-details {
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
-
 /* ---------- _teamMembers.scss ---------- */
 .team-members {
-  text-align: center;
+    margin-bottom: 50px;
 }
+
 .team-members-title {
-  margin-bottom: 50px;
+    margin-bottom: 50px;
 }
 
 .team-member {
-  background-image: url("http://placehold.it/100x100");
+    position: relative;
+    height: 200px;
+    text-align: center;
+}
+
+.team-member-title {
+    left: 0;
+    bottom: 50%;
+    display: block;
+    opacity: 0;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    transition: $image-hover-wrapper-transition;
+    font-size: rem-calc(25);
+}
+
+.team-member-info {
+    left: 0;
+    bottom: -10%;
+    display: block;
+    opacity: 0;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    transition: $image-hover-wrapper-transition;
+    font-size: rem-calc(16);
 }
