--- a/static/src/assets/scss/components/_staff.scss
+++ b/static/src/assets/scss/components/_staff.scss
@@ -4,12 +4,12 @@
 }
 
 .staff-photo {
-    padding: 10px;
-    margin-bottom: 10px;
+    padding: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 .staff-about-title {
-    padding-top: 10px;
+    padding-top: 0.5rem;
     font-size: rem-calc(25);
 }
 
