--- a/static/src/assets/scss/components/_qualifications.scss
+++ b/static/src/assets/scss/components/_qualifications.scss
@@ -6,7 +6,7 @@
 
 .qualifications-prelude {
   font-size: $font-size-subtitle;
-  font-weight: bold;
+  font-weight: $font-weight-bold;
   margin-bottom: $spacing-small;
 }
 
