--- a/static/src/assets/scss/_custom-settings.scss
+++ b/static/src/assets/scss/_custom-settings.scss
@@ -2,8 +2,10 @@
 /* --- Colors --- */
 $color-primary: #0099ff;
 $color-secondary: $white;
+
 $alpha-transparent: 0.0;
 $alpha-semi-transparent: 0.5;
+$alpha-slight-transparent: 0.8;
 $alpha-opaque: 1.0;
 
 /* --- Spacing --- */
