--- a/static/src/assets/scss/components/_reveal-card.scss
+++ b/static/src/assets/scss/components/_reveal-card.scss
@@ -3,7 +3,7 @@ $image-hover-wrapper-transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55
 $image-hover-wrapper-transition-delay: 0.25s;
 $image-hover-wrapper-banner-width: 100%;
 $image-hover-wrapper-banner-topspace: 25%;
-$image-hover-wrapper-banner-bg: rgba($primary-color, 0.8);
+$image-hover-wrapper-banner-bg: rgba($primary-color, $alpha-slight-transparent);
 $image-hover-wrapper-icon-size: 24px;
 
 $image-hover-reveal-z-index: 80;
