--- a/static/src/assets/scss/app.scss
+++ b/static/src/assets/scss/app.scss
@@ -1,7 +1,6 @@
 @charset 'utf-8';
 
 @import 'settings';
-@import 'custom-settings';
 @import 'foundation';
 @import 'motion-ui';
 
@@ -51,9 +50,12 @@
 @include motion-ui-transitions;
 @include motion-ui-animations;
 
+// Project-specific items
+@import 'custom-settings';
+
 @import './components/reveal-card';
 @import './components/qualifications';
-
 @import './components/footer';
-@import './components/index';
-@import './components/staff';
+
+@import './pages/index';
+@import './pages/staff';
