--- a/static/src/assets/scss/_custom-settings.scss
+++ b/static/src/assets/scss/_custom-settings.scss
@@ -1,12 +1,13 @@
 /* ---------- _custom-settings.scss ---------- */
 /* --- Colors --- */
-$color-primary: #0099ff;
-$color-secondary: $white;
-
 $alpha-transparent: 0.0;
 $alpha-semi-transparent: 0.5;
 $alpha-slight-transparent: 0.8;
 $alpha-opaque: 1.0;
+
+$color-primary: #005dff;
+$color-secondary: $white;
+$color-background-overlay: rgba(0, 153, 255, $alpha-slight-transparent);
 
 /* --- Spacing --- */
 $spacing-small: 0.5rem;
