Created a subset of reveal-card specifically for staff members

--- a/static/src/assets/scss/app.scss
+++ b/static/src/assets/scss/app.scss
@@ -54,6 +54,7 @@
 @import 'custom-settings';
 
 @import './components/reveal-card';
+@import './components/staff-card';
 @import './components/qualifications';
 @import './components/footer';
 
