Placeholders and small tweaks

--- a/static/src/partials/footer.html
+++ b/static/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <div class="row">
+    <div class="row medium-text-left text-center">
         <div class="large-3 medium-6 columns">
             <h5>Our Divisions</h5>
             <ul class="menu vertical">
@@ -31,7 +31,7 @@
             <a href="https://twitter.com/?lang=en"><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</a>
         </div>
     </div>
-    <div class="row">
+    <div class="row medium-text-right text-center">
         <p class="copyright">©2017 Toomby Horsemanship. All rights reserved.</p>
     </div>
 </footer>
