--- a/static/src/assets/scss/app.scss
+++ b/static/src/assets/scss/app.scss
@@ -57,6 +57,7 @@
 @import './components/staff-card';
 @import './components/qualifications';
 @import './components/footer';
+@import './components/latest-news';
 
 @import './pages/index';
 @import './pages/staff';
