--- a/static/src/assets/scss/app.scss
+++ b/static/src/assets/scss/app.scss
@@ -51,3 +51,5 @@
 @include motion-ui-animations;
 @import './components/footer';
 @import './components/index';
+
+@import './components/latest-news';
