--- a/static/src/partials/footer.html
+++ b/static/src/partials/footer.html
@@ -4,7 +4,7 @@
             <h5>Our Divisions</h5>
             <ul class="menu vertical">
                 <li><a href="#">Working Dogs &amp; Horses</a></li>
-                <li><a href="#">Ultimate Rural Training Centre</a></li>
+                <li><a href="ultimate-rural-training-centre.html">Ultimate Rural Training Centre</a></li>
                 <li><a href="#">Toomby Equine Muscular Therapy</a></li>
                 <li><a href="#">EMM-TECH</a></li>
             </ul>
