--- a/static/src/assets/scss/app.scss
+++ b/static/src/assets/scss/app.scss
@@ -56,9 +56,12 @@
 @import './components/reveal-card';
 @import './components/staff-card';
 @import './components/qualifications';
+@import './components/hero';
 @import './components/footer';
+@import './components/dl';
 @import './components/latest-news';
 
 @import './pages/index';
 @import './pages/staff';
 @import './pages/about';
+@import './pages/training';
