--- a/static/src/assets/scss/components/_staff-card.scss
+++ b/static/src/assets/scss/components/_staff-card.scss
@@ -1,4 +1,4 @@
-/* ---------- _reveal-card.scss ---------- */
+/* ---------- _staff-card.scss ---------- */
 $image-hover-wrapper-transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
 $image-hover-wrapper-transition-delay: 0.25s;
 $image-hover-wrapper-banner-width: 100%;
