Use Section instead of title

--- a/static/src/assets/scss/components/_section.scss
+++ b/static/src/assets/scss/components/_section.scss
@@ -1,5 +1,5 @@
-/* ---------- _title.scss ---------- */
-.title {
+/* ---------- _section.scss ---------- */
+.section {
   border-top: $border-subtle;
   padding-top: $spacing-large;
 }
