--- a/static/src/partials/footer.html
+++ b/static/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer section">
     <div class="row medium-text-left text-center">
         <div class="large-3 medium-6 columns">
             <h5>Our Divisions</h5>
