--- a/static/src/assets/scss/app.scss
+++ b/static/src/assets/scss/app.scss
@@ -60,7 +60,7 @@
 @import './components/footer';
 @import './components/dl';
 @import './components/latest-news';
-@import './components/title';
+@import './components/section';
 @import './pages/index';
 @import './pages/staff';
 @import './pages/training';
