--- a/static/src/assets/scss/components/_latest-news.scss
+++ b/static/src/assets/scss/components/_latest-news.scss
@@ -14,6 +14,7 @@
     font-size: $font-size-content;
     color: $color-background-overlay;
     padding: $spacing-small 0;
+    color: $dark-gray;
   }
 
   h3 {
