--- a/static/src/partials/footer.html
+++ b/static/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer section">
-    <div class="row medium-text-left text-center">
+    <div class="row large-text-left medium-text-center text-center">
         <div class="large-3 medium-6 columns">
             <h5>Our Divisions</h5>
             <ul class="menu vertical">
