--- a/static/src/partials/header.html
+++ b/static/src/partials/header.html
@@ -3,7 +3,7 @@
     <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
       <button class="menu-icon dark" type="button" data-toggle></button>
     </span>
-        <strong>Toomby</strong>
+        <strong><a href="/" rel="Home">Toomby</a></strong>
     </div>
     <div id="responsive-menu">
         <div class="top-bar-left">
