--- a/static/src/assets/scss/components/_staff-card.scss
+++ b/static/src/assets/scss/components/_staff-card.scss
@@ -13,10 +13,10 @@ $image-hover-title-min-height: 25%;
 $image-hover-content-offset-left: 0;
 $image-hover-heading-offset-top: 30%;
 
-$card-height: 300px;
+$staff-card-height: 300px;
 
 .image.card.staff {
-    height: $card-height;
+    height: $staff-card-height;
     position: relative;
     padding: 0;
     text-align: center;
