--- a/static/src/assets/scss/components/_staff-card.scss
+++ b/static/src/assets/scss/components/_staff-card.scss
@@ -1,63 +1,17 @@
 /* ---------- _staff-card.scss ---------- */
-$image-hover-wrapper-transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-$image-hover-wrapper-transition-delay: 0.25s;
-$image-hover-wrapper-banner-width: 100%;
-$image-hover-wrapper-banner-topspace: 25%;
-$image-hover-wrapper-banner-bg: rgba($primary-color, $alpha-slight-transparent);
-$image-hover-wrapper-icon-size: 24px;
-
-$image-hover-reveal-z-index: 80;
-$image-hover-title-z-index: $image-hover-reveal-z-index - 1;
-$image-hover-title-min-height: 25%;
-
-$image-hover-content-offset-left: 0;
-$image-hover-heading-offset-top: 30%;
+$staff-image-hover-heading-offset-top: 40%;
+$staff-image-hover-content-offset-bottom: -10%;
 
 $staff-card-height: 300px;
 
 .image.card.staff {
     height: $staff-card-height;
-    position: relative;
-    padding: 0;
-    text-align: center;
-}
-
-.image.card.staff a .reveal:hover h1 {
-    opacity: $alpha-opaque;
-    transform: translateY(-100%);
-    transition: $image-hover-wrapper-transition;
-    transition-delay: $image-hover-wrapper-transition-delay;
 }
 
 .image.card.staff a .reveal h1 {
-    top: $image-hover-heading-offset-top;
-    left: $image-hover-content-offset-left;
-    display: block;
-    opacity: $alpha-opaque;
-    position: absolute;
-    text-align: center;
-    width: 100%;
-    transition: $image-hover-wrapper-transition;
-    padding: $spacing-medium;
-    font-size: $font-size-title;
+    top: $staff-image-hover-heading-offset-top;
 }
 
-.image.card.staff a .reveal:hover p {
-    opacity: $alpha-opaque;
-    transform: translateY(-100%);
-    transition: $image-hover-wrapper-transition;
-    transition-delay: $image-hover-wrapper-transition-delay;
-}
-
-.image.card.staff a .reveal p {
-    bottom: 0;
-    left: $image-hover-content-offset-left;
-    display: block;
-    opacity: $alpha-opaque;
-    position: absolute;
-    text-align: center;
-    width: 100%;
-    transition: $image-hover-wrapper-transition;
-    padding: $spacing-small;
-    font-size: $font-size-subtitle;
+.image.card a .reveal p {
+    bottom: $staff-image-hover-content-offset-bottom;
 }
