Typo fix in class

--- a/static/src/assets/scss/components/_staff-card.scss
+++ b/static/src/assets/scss/components/_staff-card.scss
@@ -12,6 +12,6 @@ $staff-card-height: 300px;
     top: $staff-image-hover-heading-offset-top;
 }
 
-.image.card a .reveal p {
+.image.card.staff a .reveal p {
     bottom: $staff-image-hover-content-offset-bottom;
 }
