Added new other-staff scss file

--- a/static/src/assets/scss/app.scss
+++ b/static/src/assets/scss/app.scss
@@ -53,6 +53,7 @@
 // Project-specific items
 @import 'custom-settings';
 
+@import './components/other-staff';
 @import './components/reveal-card';
 @import './components/staff-card';
 @import './components/qualifications';
