--- a/static/src/assets/scss/_custom-settings.scss
+++ b/static/src/assets/scss/_custom-settings.scss
@@ -15,6 +15,9 @@ $spacing-medium: 1rem;
 $spacing-large: 2rem;
 $spacing-huge: 4rem;
 
+/* --- Hero --- */
+$hero-height: 20rem;
+
 /* --- Borders --- */
 $border-primary: 1px solid $color-primary;
 
