--- a/static/src/assets/scss/_settings.scss
+++ b/static/src/assets/scss/_settings.scss
@@ -45,6 +45,7 @@
 
 // 1. Global
 // ---------
+
 $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
@@ -96,7 +97,6 @@ $grid-column-count: 12;
 $grid-column-gutter: (
   small: 20px,
   medium: 30px,
-        large: 30px
 );
 $grid-column-align-edge: true;
 $block-grid-max: 8;
@@ -108,7 +108,7 @@ $header-font-family: $body-font-family;
 $header-font-weight: $global-weight-normal;
 $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
-$header-color: $black;
+$header-color: inherit;
 $header-lineheight: 1.4;
 $header-margin-bottom: 0.5rem;
 $header-styles: (
@@ -618,3 +618,4 @@ $topbar-submenu-background: $topbar-background;
 $topbar-title-spacing: 0.5rem 1rem 0.5rem 0;
 $topbar-input-width: 200px;
 $topbar-unstack-breakpoint: medium;
+
