--- a/static/src/assets/scss/components/_dl.scss
+++ b/static/src/assets/scss/components/_dl.scss
@@ -1,10 +1,10 @@
 /* ---------- _dl.scss ---------- */
 dl {
   font-size: $font-size-content;
-  width: 100%;
+  width: $definition-width;
   border-collapse: collapse;
   border-spacing: 0;
-  margin-bottom: 2rem;
+  margin-bottom: $spacing-large;
   text-align: left;
   overflow: hidden;
   display: flex;
@@ -19,9 +19,8 @@ dl {
   }
 
   dt {
-    width: 20%;
+    width: $definition-term-width;
     margin: 0;
-    font-weight: normal;
     &:hover {
       background: $color-box-background;
       & + dd {
@@ -33,8 +32,7 @@ dl {
 
   dd {
     text-align: right;
-    width: 80%;
-    font-weight: bold;
+    width: $definition-description-width;
   }
 
 }
