Hero to use variables

--- a/static/src/assets/scss/components/_hero.scss
+++ b/static/src/assets/scss/components/_hero.scss
@@ -1,8 +1,8 @@
 /* ---------- _hero.scss ---------- */
 .hero {
-  min-height: 20rem;
+  min-height: $hero-height;
   text-align: center;
   h1 {
-    margin-top: 4rem;
+    margin-top: $spacing-huge;
   }
 }
