--- a/static/src/assets/scss/_custom-settings.scss
+++ b/static/src/assets/scss/_custom-settings.scss
@@ -10,6 +10,7 @@ $color-primary: #000000;
 $color-secondary: $white;
 $color-overlay: $white;
 $color-background-overlay: rgba(0, 0, 0, $alpha-slight-transparent);
+$color-box-background: #ddedfd;
 
 /* --- Spacing --- */
 $spacing-small: 0.5rem;
