--- a/static/src/assets/scss/pages/_about.scss
+++ b/static/src/assets/scss/pages/_about.scss
@@ -1,38 +1,45 @@
 /* ---------- _about.scss ---------- */
 .about-us {
   margin-bottom: $spacing-large;
+
+  h1 {
+    text-align: center;
+    margin-bottom: $spacing-large;
+  }
+
+  p {
+    font-size: $font-size-content;
+    margin-bottom: $spacing-medium;
+  }
+
+  .aside {
+    text-align: center;
+
+    img {
+      padding: $spacing-small;
+    }
+  }
 }
 
-.about-title {
-  text-align: center;
+.goals {
   margin-bottom: $spacing-large;
-}
 
-.about-content {
-  font-size: $font-size-content;
-  margin-bottom: $spacing-medium;
-}
+  h1 {
+    text-align: center;
+    margin-bottom: $spacing-large;
+  }
 
-.about-aside {
-  text-align: center;
-}
+  .item {
+    h1 {
+      font-size: $font-size-title;
+    }
 
-.about-photo {
-  padding: $spacing-small;
-}
+    .values {
+      margin-bottom: 0;
+    }
 
-.about-subtitle {
-  font-size: $font-size-subtitle;
-}
-
-.about-values {
-  margin-bottom: 0;
-}
-
-.about-values-quote {
-  font-style: italic;
-}
-
-.vision-mission-value {
-  margin-bottom: $spacing-large;
+    .quote {
+      font-style: italic;
+    }
+  }
 }
