--- a/static/src/assets/scss/pages/_about.scss
+++ b/static/src/assets/scss/pages/_about.scss
@@ -31,6 +31,7 @@
 
     .goal {
         h1 {
+            margin-bottom: 0;
             text-align: center;
             font-size: $font-size-title;
         }
