Removed unneeded var

--- a/static/src/assets/scss/components/_qualifications.scss
+++ b/static/src/assets/scss/components/_qualifications.scss
@@ -4,7 +4,7 @@
 
     h2 {
         font-size: $font-size-subtitle;
-        font-weight: $font-weight-bold;
+        font-weight: bold;
         margin-bottom: $spacing-small;
     }
 
