--- a/static/src/assets/scss/components/_reveal-card.scss
+++ b/static/src/assets/scss/components/_reveal-card.scss
@@ -23,7 +23,7 @@ $card-height: 400px;
         display: block;
         background-color: $image-hover-wrapper-banner-bg;
         color: $white;
-        font-weight: $font-weight-bold;
+        font-weight: bold;
         bottom: 0;
         left: 0;
         padding: $spacing-small;
