--- a/static/src/assets/scss/components/_hero.scss
+++ b/static/src/assets/scss/components/_hero.scss
@@ -1,8 +1,18 @@
 /* ---------- _hero.scss ---------- */
 .hero {
-  min-height: $hero-height;
+  background: url('../img/bg.jpg') 50% no-repeat;
+  background-size: cover;
   text-align: center;
-  h1 {
-    margin-top: $spacing-huge;
+  margin-bottom: $spacing-huge;
+  min-height: $hero-height;
+
+  .row {
+    padding-top: $hero-height * 0.5;
+    padding-bottom: $hero-height * 0.5;
   }
+
+  h1, p {
+    color: $white;
+  }
+
 }
