--- a/static/src/assets/scss/app.scss
+++ b/static/src/assets/scss/app.scss
@@ -53,7 +53,7 @@
 // Project-specific items
 @import 'custom-settings';
 @import './components/other-staff';
-@import './components/reveal-card';
+@import './components/image-card';
 @import './components/staff-card';
 @import './components/qualifications';
 @import './components/hero';
